# BC

./: README.md
install/: local_setup.sh  setup.sh
install/bc_pkg/lib/bc_pkg/: carth  gest  hand  rpy
install/bc_pkg/share/bc_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/leap_gesture_interface/lib/leap_gesture_interface/: carth  gesture_interface_node  leap_example_node
install/leap_gesture_interface/share/ament_index/resource_index/package_run_dependencies/: leap_gesture_interface
install/leap_gesture_interface/share/leap_gesture_interface/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/leap_gesture_interface/share/leap_gesture_interface/cmake/: leap_gesture_interfaceConfig.cmake
install/parser_pkg/lib/parser_pkg/: parser
install/parser_pkg/share/parser_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/px4_msgs/local/lib/python3.10/dist-packages/px4_msgs/: _px4_msgs_s.ep.rosidl_typesupport_fastrtps_c.c
install/px4_msgs/local/lib/python3.10/dist-packages/px4_msgs-2.0.1-py3.10.egg-info/: SOURCES.txt
install/px4_msgs/share/ament_index/resource_index/rosidl_interfaces/: px4_msgs
install/px4_msgs/share/px4_msgs/: package.sh
log/: latest_build
src/bc_pkg/: CMakeLists.txt  package.xml
src/bc_pkg/config/: cam.rviz  virtual_hand.rviz
src/bc_pkg/config/gestures/: fist  five  one  th  thl  two
src/bc_pkg/src/: carth_pub.cpp  communication_hub.cpp  gesture.cpp  leap_control.cpp  rpy_pub.cpp  virtual_hand.cpp
src/parser_pkg/: setup.cfg  setup.py
src/parser_pkg/parser_pkg/: parser.py
